some cleanup and starting to integrate with local ddb